[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainScene.gd" type="Script" id=2]
[ext_resource path="res://Projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://DALLÂ·E 2022-12-07 21.43.44.png" type="Texture" id=5]
[ext_resource path="res://DeadPopup.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2, -3, 0, 0, 0, 0, 1023, -3, 0, 0, 0, 0, 1026, 602, 0, 0, 0, 0, -2, 601, 0, 0, 0, 0, 0, -3 )
}

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )
asteroid_scene = ExtResource( 4 )
dead_popup = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidPathLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( -2, -3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -212.0
margin_right = 1024.0
margin_bottom = 812.0
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 500, 300 )

[node name="Label" type="Label" parent="."]
margin_left = 963.0
margin_top = 5.0
margin_right = 991.0
margin_bottom = 19.0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 2

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="player_dead" from="Player" to="." method="_on_Player_player_dead"]
[connection signal="player_shoot" from="Player" to="." method="_on_Player_player_shoot"]
